Reorganize Java Tuning documentation and add Performance Testing section with `oha` example